# PkmnRLArena

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  test_state.sav
.github/workflows/: build_docker.yml  test.yml
benchmarks/: benchmark_env.py
data/: data_scrap_from_mgba
data/csv_data/: pokemon_data.csv
example/: training.ipynb
examples/: export.ipynb  training.ipynb
pkmn_rl_arena/: __init__.py  logging.py  paths.py  test_utils.py
pkmn_rl_arena/data/: over_used.py  parser.py  pkmn_params.py  pokemon_data.py  pokemon_scrap.py
pkmn_rl_arena/env/: README.md  action.py  arena.py  battle_arena.py  battle_core.py  battle_state.py  benchmark.py  enums.py  observation.py  pkmn_team_factory.py  pokemon_rl_core.py  rendering.py  replay_buffer.py  reward_manager.py  save_state.py
pkmn_rl_arena/env/reward/: functions.py  manager.py
pkmn_rl_arena/export/: base.py  onnx_exporter.py  onnx_utils.py
pkmn_rl_arena/export/exporters/: parameters.py
pkmn_rl_arena/policy/: battle_helpers.py  policy.py  strategy.py  types.py
pkmn_rl_arena/training/: config.py  elo.py  log.py  plot.py  replay_buffer.py  train.py  workers.py
pkmn_rl_arena/training/models/: pkmn_model.py
pkmn_rl_arena/training/wrappers/: curriculum_wrappers.py
tests/: test_PkmnRLCore.py  test_arena.py  test_battle_arena.py  test_battle_state.py  test_curriculum_wrappers.py  test_export.py  test_observation.py  test_pettingzoo_env.py  test_pkmn_model.py  test_render.py  test_reward_manager.py  test_rustboyadvance_py.py  test_save_state.py  test_strategies.py
(+9 files in other folders)
