[project]
name = "pkmn_rl_arena"
version = "0.1.0"
description = "Reinforcement learning and exporting neural networks on pokemon emerald to flash a game card. Yes we run AI on a Game Boy Advance."
authors = [
    { name = "Wissam Boussella", email = "wissamboussella@gmail.com" },
    { name = "Grégoire Kubler", email = "greg_is_kub@pm.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "onnx",
    "onnxruntime",
    "rich",
    "maturin",
    "pettingzoo>=1.25.0",
    "gymnasium>=1.1.0",
    "colorama>=0.4.6",
    "picologging>=0.9.3",
    "ray[rllib]",
    "rustboyadvance-py",
    "pillow>=12.0.0",
    "tensorboard>=2.20.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pkmn_rl_arena"
module-root = ""

[dependency-groups]
dev = [
    "icecream>=2.1.7",
    "ipdb>=0.13.13",
    "pytest>=8.4.1",
]

# This tells uv where to find the other project
[tool.uv.sources]
rustboyadvance-py = { path = "rustboyadvance-ng-for-rl/platform/rustboyadvance-py", editable = true }